Adjusted start page. -added scroll animation to arrow button -fixed issue where sign up form was overlapping arrow button
#story[587]

--- a/public/stylesheets/cover.css
+++ b/public/stylesheets/cover.css
@@ -204,12 +204,22 @@ h2 {
 }
 
 .down-arrow {
-    height: 10%;
+    height: 8%;
     position: absolute;
     top: 97%;
     transform: translate(-50%, -50%);
 }
 
 .down-arrow:hover {
+    cursor: pointer;
+    height: 9%;
+}
+
+#get-started-btn {
+    color: #007bff;
+}
+
+#get-started-btn:hover {
+    text-decoration: underline;
     cursor: pointer;
 }
